--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/asian-lettuce-wraps.html">Asian Lettuce Wraps</a>
+        <ul>
+            <li> <a href="recipes/asian-lettuce-wraps.html">Asian Lettuce Wraps</a></li>
+            <li> <a href="recipes/chicken-and-rice.html">Chiken and Rice</a></li>
+        </ul>
     </bdy>
 </html>
