--- a/recipes/asian-lettuce-wraps.html
+++ b/recipes/asian-lettuce-wraps.html
@@ -10,7 +10,7 @@
         <img src="./img/Asian-Lettuce-Wraps.jpg" alt="Asian Lettuce Wraps">
         <h2>Description</h2>
             <p>
-                These lettuce wraps are bursting with Asian flavors, delicious, and a great idea for entertaining or a family-style meal. To serve, allow each person to spoon a portion of the beef mixture into a lettuce leaf. Wrap the lettuce around the beef like a burrito and enjoy!
+                These <strong>lettuce wraps</strong> are bursting with Asian flavors, delicious, and a great idea for entertaining or a family-style meal. To serve, allow each person to spoon a portion of the beef mixture into a lettuce leaf. Wrap the lettuce around the beef like a burrito and enjoy!
             </p>
         <h2>Ingredients</h2>
             <ul>
