Added italian sausages, and Go back to menu options in all recipes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li> <a href="recipes/asian-lettuce-wraps.html">Asian Lettuce Wraps</a></li>
             <li> <a href="recipes/chicken-and-rice.html">Chiken and Rice</a></li>
+            <li> <a href="recipes/italian-sausages-peppers-and-onions.html">Italian Sausages Peppers and Onions</a></li>
         </ul>
     </bdy>
 </html>
