--- a/recipes/asian-lettuce-wraps.html
+++ b/recipes/asian-lettuce-wraps.html
@@ -27,5 +27,6 @@
                 <li>Stir in hoisin sauce, garlic, soy sauce, vinegar, ginger, and chile pepper sauce until well combined. Add water chestnuts, green onions, sesame oil, and cooked beef; cook and stir until the onions just begin to wilt, about 2 minutes.</li>
                 <li>Arrange lettuce leaves around the outer edge of a large serving platter; spoon beef mixture in the center.</li>
             </ol>
+            <a href="../index.html">Go back to Menu</a>
     </body>
 </html>
