Modified images to the same resolution, improved index with CSS and fixed a typo in menu

--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./css/style.css">
         <title>Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li> <a href="recipes/asian-lettuce-wraps.html">Asian Lettuce Wraps</a></li>
-            <li> <a href="recipes/chicken-and-rice.html">Chiken and Rice</a></li>
-            <li> <a href="recipes/italian-sausages-peppers-and-onions.html">Italian Sausages Peppers and Onions</a></li>
-        </ul>
-    </bdy>
+        <div class="container">
+            <p class="main-title">Odin Recipes</p>
+            <ul class="recipes-list">
+                <li> <a href="recipes/asian-lettuce-wraps.html">Asian Lettuce Wraps</a></li>
+                <li> <a href="recipes/chicken-and-rice.html">Chicken and Rice</a></li>
+                <li> <a href="recipes/italian-sausages-peppers-and-onions.html">Italian Sausages Peppers and Onions</a></li>
+            </ul>
+        </div>
+    </body>
 </html>
