--- a/recipes/asian-lettuce-wraps.html
+++ b/recipes/asian-lettuce-wraps.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Asian Lettuce Wraps</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
-        <h1>Asian Lettuce Wraps</h1>
-        <img src="./img/Asian-Lettuce-Wraps.jpg" alt="Asian Lettuce Wraps">
+        <h1 class="main-title">Asian Lettuce Wraps</h1>
+        <img class="image" src="./img/Asian-Lettuce-Wraps.jpg" alt="Asian Lettuce Wraps">
         <h2>Description</h2>
             <p>
                 These <strong>lettuce wraps</strong> are bursting with Asian flavors, delicious, and a great idea for entertaining or a family-style meal. To serve, allow each person to spoon a portion of the beef mixture into a lettuce leaf. Wrap the lettuce around the beef like a burrito and enjoy!
