--- a/recipes/chicken-and-rice.html
+++ b/recipes/chicken-and-rice.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken and Rice</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
         <h1>Chicken and Rice</h1>
-        <img src="./img/arroz-con-pollo.jpg">
+        <img class= "image" src="./img/arroz-con-pollo.jpg">
         <h2>Description</h2>
         <p>This <strong>arroz con pollo</strong> is an easy chicken and seasoned rice dish that's comforting and delicious. Easy to adjust to use chicken thighs, or leftover chicken.</p>
         <h2>Ingredients</h2>
