--- a/recipes/italian-sausages-peppers-and-onions.html
+++ b/recipes/italian-sausages-peppers-and-onions.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Italian Sausages, Peppers and Onions</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     
     <body>
         <h1>Italian Sausages, Peppers and Onions</h1>
-        <img src="./img/sausage.jpg">
+        <img class="image" src="./img/sausage.jpg">
         <h2>Description</h2>
         <p>This simple and delicious one-pan sausage and peppers recipe has been used in our family for years and years now. Serve in a roll, or use as a topping for pizza or pasta. For an extra kick, try using 1/2 sweet Italian sausage and 1/2 hot sausage!</p>
         <h2>Ingredients</h2>
