Styled index.html with CSS

--- a/index.html
+++ b/index.html
@@ -8,11 +8,49 @@
     <body>
         <div class="container">
             <p class="main-title">Odin Recipes</p>
-            <ul class="recipes-list">
-                <li> <a href="recipes/asian-lettuce-wraps.html">Asian Lettuce Wraps</a></li>
-                <li> <a href="recipes/chicken-and-rice.html">Chicken and Rice</a></li>
-                <li> <a href="recipes/italian-sausages-peppers-and-onions.html">Italian Sausages Peppers and Onions</a></li>
-            </ul>
-        </div>
+                <div class="card first">
+                    <div class="recipe-name">
+                        <a href="recipes/asian-lettuce-wraps.html">Asian Lettuce Wraps</a>
+                    </div>
+                    <div class="recipe-image">
+                        <img class= img-card src="./recipes/img/Asian-Lettuce-Wraps.jpg">
+                    </div>
+                    <div class="recipe-description">
+                        <p>A great idea for entertaining or a family-style meal. Wrap the lettuce around the beef like a burrito and enjoy!</p>
+                    </div>
+                    <div class="recipe-button">
+                        <a href="./recipes/asian-lettuce-wraps.html">Click here</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="recipe-name">
+                        <a href="recipes/chicken-and-rice.html">Chicken and Rice</a>
+                    </div>
+                    <div class="recipe-image">
+                        <img class= img-card src="./recipes/img/arroz-con-pollo.jpg">
+                    </div>
+                    <div class="recipe-description">
+                        <p>An easy chicken and seasoned rice dish that's comforting and delicious. </p>
+                    </div>
+                    <div class="recipe-button">
+                        <a href="./recipes/chicken-and-rice.html">Click here</a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="recipe-name">
+                        <a href="recipes/italian-sausages-peppers-and-onions.html">Italian sausages peppers</a>
+                    </div>
+                    <div class="recipe-image">
+                        <img class= img-card src="./recipes/img/sausage.jpg">
+                    </div>
+                    <div class="recipe-description">
+                        <p>This simple and delicious one-pan sausage and peppers recipe has been used in our family for years and years now. </p>
+                    </div>
+                    <div class="recipe-button">
+                        <a href="./recipes/italian-sausages-peppers-and-onions.htmlSS">Click here</a>
+                    </div>
+                </div>
     </body>
 </html>
